--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "goit-react-hw-02",
+  "name": "goit-react-hw-04-feedback",
   "version": "0.1.0",
-  "homepage": "https://Aleksandr-Kovshar.github.io/goit-react-hw-02",
+  "homepage": "https://Aleksandr-Kovshar.github.io/goit-react-hw-04-feedback",
   "private": false,
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.24.1",
